--- a/src/main/resources/com/merchat/view/host-chat.fxml
+++ b/src/main/resources/com/merchat/view/host-chat.fxml
@@ -12,15 +12,15 @@
             </padding>
             <ToolBar>
                 <Button mnemonicParsing="false" onAction="#onBtnGoBackClicked" text="Go back" />
-                <Button disable="true" mnemonicParsing="false" onAction="#onBtnServerToolsClick" text="Open server tools" />
+                <Button mnemonicParsing="false" onAction="#onBtnServerToolsClick" text="Open server tools" />
             </ToolBar>
             <TextArea fx:id="tvChat" editable="false" wrapText="true" VBox.vgrow="ALWAYS" />
             <TextField fx:id="txtChat" onKeyPressed="#onTxtChatKeyPressed" promptText="Type here" VBox.vgrow="ALWAYS" />
         </VBox>
-        <Accordion fx:id="acrdServerTools" managed="false" visible="false" HBox.hgrow="ALWAYS">
+        <Accordion fx:id="acrdServerTools" managed="false" prefWidth="200.0" visible="false" HBox.hgrow="ALWAYS">
             <panes>
                 <TitledPane text="Users">
-                    <VBox>
+                    <VBox fx:id="paneUsers">
                     </VBox>
                 </TitledPane>
                 <TitledPane text="Message Type">
@@ -28,7 +28,7 @@
                         <padding>
                             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                         </padding>
-                        <RadioButton mnemonicParsing="false" selected="true" text="Speak">
+                        <RadioButton fx:id="rbtSpeak" mnemonicParsing="false" selected="true" text="Speak">
                             <padding>
                                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                             </padding>
@@ -36,7 +36,7 @@
                                 <ToggleGroup fx:id="message_type" />
                             </toggleGroup>
                         </RadioButton>
-                        <RadioButton mnemonicParsing="false" text="Broadcast">
+                        <RadioButton fx:id="rbtBroadcast" mnemonicParsing="false" text="Broadcast">
                             <padding>
                                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                             </padding>
